<resources>
    <string name="app_name">GraduationProject</string>
    <string name="select_image">Select Image</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string name="login_under_lined"><u>Login</u></string>
    <string name="register_under_lined"><u>Register</u></string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="about_the_disease">About the disease</string>
    <string name="preventions">Preventions</string>
    <string name="disease">Diseases</string>
    <string name="symptom">Symptoms</string>
    <string name="precaution">Precautions</string>
    <string name="very_long_fake_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="try_to_make_test">Try to make test</string>
    <string name="go_to_scan">Go to Scan</string>
    <string name="skin_scan">Skin Scan</string>
    <string name="name">Name</string>
    <string name="history">History</string>
    <string name="allow_saving_images">Allow saving images</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="edit_password">Edit Password</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="new_email">New Email</string>
    <string name="new_name">New Name</string>
</resources>